fixed spacing above and below carousel

--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -176,6 +176,7 @@ background-color: rgba(0, 0,0, 0.1);
 .slider {
 
 	border: 10px solid #f3f3f3;
+	border-top: 5px solid #f3f3f3;
 		padding: 25px 50px;
 		background-color: #fff;
 
@@ -206,7 +207,7 @@ left: -40px !important;
 	text-align: center;
 	display: block;
 	width: 100%;
-	margin-top:25px;
+	margin-top: 25px;
 	padding:10px 0;
 	margin-bottom: 25px;
 	font-size: 24px;
